--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,5 @@
-#ttt {
-    background-color: rgba(94, 94, 94, 0.651);
-}
+@import "./root";
+@import "./vars";
+@import "./default";
+@import "./spinner";
+@import "./layout";
