--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,8 @@
 @import "./root";
 @import "./vars";
 @import "./default";
+@import "./scroll-bar";
 @import "./spinner";
 @import "./layout";
+@import "./classes";
+@import "./icon-btn";
