--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -1,3 +1,48 @@
-html, body {
+html,
+body {
     margin: 0;
+    background: var(--black-a90);
+}
+
+* {
+    box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+    padding: 0;
+    font-family: $font-family-mont;
+    letter-spacing: 1px;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+    font-family: $font-family-pro;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+input {
+    border: none;
+    outline: none;
+}
+
+#target {
+    position: relative;
+    max-width: 1600px;
+    margin: 0 auto;
+}
+
+* {
+    color: var(--white-a70);
 }
