--- a/src/scss/content/_content-tabs.scss
+++ b/src/scss/content/_content-tabs.scss
@@ -2,5 +2,44 @@
     height: $height-40;
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+
+    #tab-list {
+        flex-grow: 1;
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        max-width: 100%;
+        overflow: hidden;
+        overflow-x: auto;
+
+        .is-tab {
+            padding: $padding-2 $padding-16;
+            max-width: 100%;
+            height: 100%;
+            flex: 0 0 auto;
+
+            display: flex;
+            align-items: center;
+            text-align: center;
+
+            cursor: pointer;
+        }
+
+        .is-tab.tab-active {
+            background: $black-30;
+        }
+    }
+
+    #tab-list::-webkit-scrollbar {
+        height: 4px;
+    }
+
+    #tab-list::-webkit-scrollbar-thumb {
+        background-color: $scroll-bar-color !important;
+    }
 }
+
+// @include _scroll-bar("#tab-list", var(--black-a45));
