--- a/src/scss/left-side/_search-bar.scss
+++ b/src/scss/left-side/_search-bar.scss
@@ -4,7 +4,26 @@
     display: flex;
     flex-direction: row;
 
-    padding: 8px;
+    justify-content: stretch;
+    align-items: center;
 
     box-sizing: border-box;
+
+    position: relative;
+
+    border-bottom: 1px solid var(--white-a12);
+    border-right: 1px solid var(--white-a12);
+    input {
+        flex-grow: 1;
+        height: 30px;
+        background: none;
+        padding-left: $padding-8;
+    }
+
+    .icon-btn {
+        position: absolute;
+
+        right: 0;
+    }
+    // input:
 }
