--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -15,6 +15,12 @@ $font-family-ubuntu: "Ubuntu", sans-serif;
 $error: red;
 $success: green;
 $warn: yellow;
+
 $scroll-bar-color: var(--white-a18);
+$btn-outline: var(--white-a18);
+
 $tx-active: var(--white-a06);
 $black-30: var(--black-a30);
+
+$muted-white: var(--white-a12);
+$border-c1: $muted-white;
