--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -17,7 +17,9 @@ h6 {
     margin: 0;
     padding: 0;
     font-family: $font-family-mont;
-    letter-spacing: 1px;
+    letter-spacing: 1.2px;
+
+    text-transform: uppercase;
 }
 
 p {
@@ -41,6 +43,14 @@ input {
     position: relative;
     max-width: 1600px;
     margin: 0 auto;
+}
+
+input,
+p,
+ul,
+li,
+span {
+    font-family: $font-family-pro;
 }
 
 * {
