--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -7,7 +7,8 @@
     left: 0;
     bottom: 0;
     height: 100vh;
-
+    border-left: 1px solid $border-c1;
+    border-right: 1px solid $border-c1;
     #header {
         height: 30px;
         background: var(--black-a15);
@@ -15,6 +16,7 @@
         align-items: center;
         justify-content: center;
         // align-self: center;
+        border-bottom: 1px solid $border-c1;
     }
 
     #layout-wrapper {
@@ -27,6 +29,7 @@
 
             display: flex;
             flex-direction: column;
+            border-right: 1px solid $border-c1;
 
             @import "./left-side/search-bar";
 
@@ -35,10 +38,13 @@
 
         #content {
             flex-grow: 1;
-            height: 100%;
+
             display: flex;
             flex-direction: column;
+            width: 0;
+            height: 100%;
 
+            // border-right: 1px solid $border-c1;
             @import "./content/content-tabs";
 
             @import "./content/content-components";
