--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -4,6 +4,7 @@ $height-40: 40px;
 $padding-2: 2px;
 $padding-4: 4px;
 $padding-8: 8px;
+$padding-12: 12px;
 $padding-16: 16px;
 
 /** fonts */
@@ -24,3 +25,5 @@ $black-30: var(--black-a30);
 
 $muted-white: var(--white-a12);
 $border-c1: $muted-white;
+
+$white-40: var(--white-a40);
