--- a/src/scss/content/_content-tabs.scss
+++ b/src/scss/content/_content-tabs.scss
@@ -15,6 +15,7 @@
         overflow: hidden;
         overflow-x: auto;
 
+        height: 40px;
         .is-tab {
             padding: $padding-2 $padding-8;
             padding-left: 21px;
