--- a/src/scss/left-side/_tx-tree.scss
+++ b/src/scss/left-side/_tx-tree.scss
@@ -28,11 +28,12 @@
         > * {
             font-family: $font-family-pro;
             font-size: 14px;
-        }
-
-        .tx-list-item {
             margin-top: 6px;
         }
+
+        // .tx-list-item {
+
+        // }
 
         .tx-list-item.close {
             > ul {
